--- a/interface/public/index.html
+++ b/interface/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -52,15 +52,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <!--   <script src="../src/lib/jquery/jquery.min.js"></script>
-    <script src="../src/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../src/lib/feather-icons/feather.min.js"></script>
-    <script src="../src/assets/js/dashforge.js"></script> -->
-    <!--  <script src="https://unpkg.com/feather-icons"></script>
-   -->
-    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-    <script>
-      feather.replace();
-    </script>
+    <!--    
+    <script href="/lib/dashforge/dashforge.js"></script> -->
+
+    <!--     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.28.0/feather.min.js"
+      integrity="sha512-7x3zila4t2qNycrtZ31HO0NnJr8kg2VI67YLoRSyi9hGhRN66FHYWr7Axa9Y1J9tGYHVBPqIjSE1ogHrJTz51g=="
+      crossorigin="anonymous"
+    ></script> -->
   </body>
 </html>
