--- a/interface/public/index.html
+++ b/interface/public/index.html
@@ -2,21 +2,13 @@
 <html lang="da">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo_aC_BA_CL.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- vendor css -->
-    <!--    <link
-      href="../src/lib/@fortawesome/fontawesome-free/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link href="../src/lib/ionicons/css/ionicons.min.css" rel="stylesheet" /> -->
-    <!-- DashForge CSS -->
-    <!--   <link rel="stylesheet" href="../src/assets/css/dashforge.css" /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
@@ -37,30 +29,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>React App</title>
+    <title>Opgaver | AcBaCl</title>
   </head>
   <body class="assistant-interface">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-    <!--    
-    <script href="/lib/dashforge/dashforge.js"></script> -->
-
-    <!--     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.28.0/feather.min.js"
-      integrity="sha512-7x3zila4t2qNycrtZ31HO0NnJr8kg2VI67YLoRSyi9hGhRN66FHYWr7Axa9Y1J9tGYHVBPqIjSE1ogHrJTz51g=="
-      crossorigin="anonymous"
-    ></script> -->
   </body>
 </html>
